# ipk-exercises

./: README.md  collatz-vermutung.cc  helloworld.cc  helpme.txt  nameespace.cc  potenzen.cc
IPI_Übung01/: schnelle_Eponentation.cc
IPI_Übung02/: kleinste_vollkommene_Zahl.cc  vollkommen-template.cc
IPI_Übung04/: biominal  biominal.cpp  biominal_fast  biominal_fast.cpp
IPI_Übung06/: Aufgabe1a.cc  Aufgabe1b.cc  Aufgabe2.cc  Aufgabe3.cc
IPK_Übung02/: Fibonacci-Formel.cc
IPK_Übung03/: namespace.hh  potenzen.cc
IPK_Übung04/: covexeHülle.cc  hull.txt  hülle  vector  vector.cc
IPK_Übung04/Aufgabe1/: prettyPrint.hpp  vector1a  vector1a.cpp  vector1b  vector1b.cpp  vector1c  vector1c.cpp  vector1d  vector1d.cpp  vector1e  vector1e.cpp
IPK_Übung04/Aufgabe2/: convex-hull-points.txt  hull  hull.txt  hull2.cpp
IPK_Übung05/: CMakeLists.txt  io.cc  io.hh  mean.cc  median.cc  normal.cc  readvector.cc  statistics.cc  statistics.hh  uniform.cc
IPK_Übung05/release-build/: CMakeCache.txt  Makefile  cmake_install.cmake  normal  readvector  uniform
IPK_Übung06/: CMakeLists.txt  ErstenZehnregelmaessigenNEcke.cc  point.cc  point.hh  polygon.cc  polygon.hh  ueberschlagendePolygone.cc
IPK_Übung06/Aufgabe 2/: CMakeLists.txt  canvas.cc  canvas.hh  plot.cc  point.cc  point.hh  testcorners.cc
